<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.warmie.ChooseActivity" >
   
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" 
        android:layout_gravity="center"       
        android:orientation="vertical" >
        
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"  >
                   
	        <TextView
		        android:id="@+id/textView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp"		        
		        android:gravity="center"
		        android:layout_weight="10"
		        android:textSize="16sp"
		        android:text="@string/chooseyourtravel" />

	        <Button
	            android:id="@+id/choose_arrow_button"
	            android:layout_width="30dp"
	            android:layout_height="30dp"
	            android:layout_marginTop="15dp"	            
	            android:layout_gravity="right"
	            android:scaleType="centerInside" 
	            android:background="@drawable/arrow" />
        
        </LinearLayout>
        
	    <Button
	        android:id="@+id/choose_button1"
	        android:layout_width="250dp"
	        android:layout_height="100dp"
	        android:layout_gravity="center"
	        android:layout_margin="5dp"
	        android:background="@color/purple"
	        android:text="@string/button1_text"
	        android:gravity="center"
	        android:textColor="@color/white" />
	    
	    <Button
	        android:id="@+id/choose_button2"
	        android:layout_width="250dp"
	        android:layout_height="100dp"
	        android:layout_margin="5dp"
	        android:layout_gravity="center"
	        android:background="@color/peach"
	        android:text="@string/button2_text"
	        android:gravity="center"
	        android:textColor="@color/white" />
	
	    <Button
	        android:id="@+id/choose_button3"
	        android:layout_width="250dp"
	        android:layout_height="100dp"
	        android:layout_margin="5dp"
	        android:layout_gravity="center"
	        android:background="@color/lightgreen"
	        android:text="@string/button3_text"
	        android:gravity="center"
	        android:textColor="@color/white" />
	    
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/textView2" />
    
    </LinearLayout>

</RelativeLayout>