<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.warmie.StartActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center" >

        <ImageView
            android:id="@+id/start_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/warmie_icon" />

        <TextView
            android:id="@+id/start_logo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_activity_start"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/purple" />

        <TextView
            android:id="@+id/text_start_msg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:text="@string/start_msg1" />
        
        <TextView
            android:id="@+id/text_start_msg2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_start"
            android:layout_alignLeft="@+id/text_start_msg1"
            android:gravity="right"
            android:text="@string/start_msg2" />
        
    </LinearLayout>


</RelativeLayout>
